--- a/index.html
+++ b/index.html
@@ -17,37 +17,37 @@
         <ul class="card-box" >
             <li>
                 <a href="#" target="_blank" rel="noopener noreferrer"></a>
-                <img src="/src/img/search.svg" alt="imgsearch">
+                <img src="img/search.svg" alt="imgsearch">
                 <h3>Search doctor</h3>
                 <span>Choose your doctor from thousands of specialist, general, and trusted hospitals</span>
             </li>
             <li>
                 <a href="#" target="_blank" rel="noopener noreferrer"></a>
-                <img src="/src/img/online-pharmacy.svg" alt="imgpharmacy">
+                <img src="img/online-pharmacy.svg" alt="imgpharmacy">
                 <h3>Online pharmacy</h3>
                 <span>Buy  your medicines with our mobile application with a simple delivery system</span>
             </li>
             <li>
                 <a href="#" target="_blank" rel="noopener noreferrer"></a>
-                <img src="/src/img/consultation.svg" alt="imgconsultation">
+                <img src="img/consultation.svg" alt="imgconsultation">
                 <h3>Consultation</h3>
                 <span>Free consultation with our trusted doctors and get the best recomendations</span>
             </li>
             <li>
                 <a href="#" target="_blank" rel="noopener noreferrer"></a>
-                <img src="/src/img/details info.svg" alt="imgdetails">
+                <img src="img/details info.svg" alt="imgdetails">
                 <h3>Details info</h3>
                 <span>Free consultation with our trusted doctors and get the best recomendations</span>
             </li>
             <li>
                 <a href="#" target="_blank" rel="noopener noreferrer"></a>
-                <img src="/src/img/emergency care.svg" alt="imgemergency">
+                <img src="img/emergency care.svg" alt="imgemergency">
                 <h3>Emergency care</h3>
                 <span>You can get 24/7 urgent care for yourself or your children and your lovely family</span>
             </li>
             <li>
                 <a href="#" target="_blank" rel="noopener noreferrer"></a>
-                <img src="/src/img/tracking.svg" alt="imgtracking">
+                <img src="img/tracking.svg" alt="imgtracking">
                 <h3>Tracking</h3>
                 <span>Track and save your medical history and health data </span>
             </li>
